# zk-fft

./: README.md  benchmark.md
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/benches/: benchmark.md  fft_benchmark.rs
host/src/: main.rs  test.sh
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
