[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
zk-fft-core = { path = "../core" }
methods = { path = "../methods" }
risc0-zkvm = { version = "0.20.1" }
env_logger = "0.10"
serde = "1.0"
rand = "0.8.5"

[features]
cuda = ["risc0-zkvm/cuda"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "fft_benchmark"
harness = false